[package]
name = "ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
chrono="0.4.23"
# digest = "0.10.6"
sha2 = "0.10.6"
serde_urlencoded = "0.7.1"
hmac = "0.12.1"
base64 = "0.21.0"
hex-literal = "0.3.4"
hex = "0.4.3"